# chatalysis

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  TODO  __main__.py  analysis.py  chat.py  chatalysis.spec  chatalysis_new.spec  mise.toml  mypy.ini  output.py  output2pdf.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
chatalysis/: GUI.py  Messenger.py  __init__.py  __main__.py  analysis.py  analyzer.py  chat.py  chatalysis.py  cli.py  const.py  gui.py  infographic.py  interface.py  message_source.py  messenger.py  output.py  paths.py  program.py  utility.py
chatalysis/GUI/: main_gui.py  window_individual.py
chatalysis/chats/: analyzer.py  chat.py  personal.py  stats.py
chatalysis/gui/: gui_utils.py  main_gui.py  singleton_window.py  window_individual.py  window_top_ten.py
chatalysis/program/: gui.py  program.py
chatalysis/sources/: facebook_source.py  instagram.py  message_source.py  messenger.py  whatsapp.py
chatalysis/utils/: config.py  const.py  utility.py
output/: .gitignore
resources/: index.html  index.html.j2
resources/images/: icon.icns
resources/templates/: chat.html.j2  index.html.j2  instagram_chat.html.j2  instagram_group.html.j2  instagram_personal.html.j2  instagram_regular.html.j2  messenger_chat.html.j2  messenger_group.html.j2  messenger_personal.html.j2  messenger_regular.html.j2  personal.html.j2  style.css  whatsapp_group.html.j2
scripts/: install.bat  run.bat  run_cmd.bat  run_exe.bat
tests/: test_config.py  test_utility.py
(+3 files in other folders)
