[metadata]
name = chatalysis
description = Analyse and visualise your Facebook Messenger and Instagram chats
author = Štěpán Vácha, Filip Miškařík
version = 1.1.1
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    .
install_requires =
    appdirs
    emoji>=2.2.0
    plotly>=5.10.0
    jinja2
    regex
    requests
    tabulate
    tkmacosx

python_requires = >=3.10
package_dir =
    =chatalysis
zip_safe = no

[options.extras_require]
testing =
    black
    flake8
    mypy>=0.982
    pytest>=7.0.0
    types-emoji
    types-requests
    types-tabulate

[flake8]
max-line-length = 120
extend-ignore = E129, E203, E501, E701, E704, E741, W929